2012-07-02 18:43  paddockd

	* [r357] ChangeLog, lib/portaudio/pa_unix_oss/pa_unix.c,
	  src/squeezeslave/squeezeslave.c: Applied Linux Duplex bug fix
	  from Alan Horstmann 4.6.07 to portaudio v18.
	  Increased revision to 357.

2012-06-21 16:45  paddockd

	* [r356] src/slimaudio/slimaudio.c,
	  src/slimaudio/slimaudio_output.c,
	  src/squeezeslave/squeezeslave.c: Added stream active check to
	  output STOP case for portaudio v18.
	  Increased revision to 356.

2012-06-20 21:18  paddockd

	* [r355] ChangeLog, TODO, src/slimaudio/slimaudio.h,
	  src/slimaudio/slimaudio_output.c,
	  src/squeezeslave/squeezeslave.c: Added a timeout to the new
	  buffering loop.
	  Increased revision to 355.

2012-06-20 17:52  paddockd

	* [r354] ChangeLog, src/slimaudio/slimaudio_decoder_vorbis.c,
	  src/squeezeslave/squeezeslave.c: Removed TREMOR_DECODER
	  restriction for big endian systems.
	  Increased revision to 354.

2012-06-20 00:02  paddockd

	* [r353] ChangeLog, contrib/makefile.sol-gcc-sparc-display,
	  makefile.sol10-intel-display, makefile.sol10-sparc64-display,
	  makefile.sol9-sparc-display, src/squeezeslave/squeezeslave.c:
	  Removed RENICE feature from solaris makefiles.
	  Increased revision to 353.

2012-06-19 23:57  paddockd

	* [r352] ChangeLog, src/squeezeslave/help.c,
	  src/squeezeslave/squeezeslave.c: Changed default state for
	  threshold_override to disabled.
	  Added help description for threshold_override.
	  Increased revision to 352.

2012-06-19 23:46  paddockd

	* [r351] ChangeLog, TODO, src/slimaudio/slimaudio_http.c,
	  src/slimaudio/slimaudio_output.c,
	  src/squeezeslave/squeezeslave.c: Added our own output_threshold
	  of 1.2 seconds if the server sends 0 in strm message.
	  Added buffering to PLAY state in slimaudio_output.c using
	  output_threshold. Fixes dropouts when playing the first track in
	  a playlist on Solaris.
	  Increased revision to 151.

2012-06-17 10:39  paddockd

	* [r350] ChangeLog, src/slimaudio/slimaudio_http.c,